# pynix

./: .gitignore  Makefile  README.md  config.example.toml  pyproject.toml  run.py
docs/: setup.md
lib/extensions/: errors.py  general.py  moderators.py
lib/server/: __init__.py
