[tool.poetry]
name = "pynix"
version = "0.1.0"
description = "A Python bot written in Python"
authors = ["Abdul <abdul@horus64.org>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.25.0"
nextcord = "^2.0.0-alpha.10"
toml = "^0.10.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
